aligncenter and attachment full width fix (again) [touch: 15]

--- a/scss/scss/objects/_layout.scss
+++ b/scss/scss/objects/_layout.scss
@@ -87,8 +87,14 @@
 }
 .alignnone {
 	float: left;
-	width: 100%;
+	max-width: 100%;
 
+}
+.aligncenter {
+	float: none;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 .alignleft {
 	float: left;
